# camera_driver

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  package.xml
cmake/: .clang-tidy  Config.cmake.in  GlobalConfig.cmake  PackageConfig.cmake  Warnings.cmake  clang-tidy.cmake
config/: camera.yaml
examples/: CMakeLists.txt  basic_example.cpp
include/camera_driver/: camera.h  camera_utils.h
include/camera_usb_driver/: camera.h
launch/: camera_setup.launch
src/: CMakeLists.txt  camera.cpp  camera_client_node.cpp  camera_server_node.cpp  send_video_feeds.cpp  view_video_feeds.cpp
src/camera_driver/include/: CMakeLists.txt  camera.h  camera_utils.h
src/camera_driver/src/: CMakeLists.txt  camera.cpp  camera_utils.cpp
src/camera_utils/: camera.cpp  camera_utils.cpp
